--- a/index.html
+++ b/index.html
@@ -133,28 +133,32 @@
     <h3 class="names">John Smith</h3>
     <p class="occupation">Product Designer</p>
     <ul class="social">
-        <li class="social-links"><a href=""  aria-label="Instagram">
+        <li class="social-links">
+            <a class="social-link" href=""  aria-label="Instagram">
             <span class="visually-hidden">Instagram</span>
             <svg class="icon-social" width="20" height="20">
                 <use href="./images/sprite.svg#icon-instagram"></use>
             </svg>
             </a>
         </li>
-        <li class="social-links"><a href="" aria-label="Twitter">
+        <li class="social-links">
+            <a class="social-link" href="" aria-label="Twitter">
                 <span class="visually-hidden">Twitter</span>
                 <svg class="icon-social" width="20" height="18">
                     <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
             </a>
         </li>
-        <li class="social-links"><a href="" aria-label="Facebook">
+        <li class="social-links">
+            <a class="social-link" href="" aria-label="Facebook">
                 <span class="visually-hidden">Facebook</span>
                 <svg class="icon-social" width="15" height="20">
                     <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
             </a>
         </li>
-        <li class="social-links"><a href="" aria-label="Linkedin">
+        <li class="social-links">
+            <a class="social-link" href="" aria-label="Linkedin">
                 <span class="visually-hidden">Linkedin</span>
                 <svg class="icon-social" width="20" height="20">
                     <use href="./images/sprite.svg#icon-linkedin"></use>
@@ -171,28 +175,32 @@
     <h3 class="names">Marta Stewart</h3>
     <p class="occupation">Frontend Developer</p>
     <ul class="social">
-        <li class="social-links"><a href=""  aria-label="Instagram">
+        <li class="social-links">
+            <a class="social-link" href=""  aria-label="Instagram">
             <span class="visually-hidden">Instagram</span>
             <svg class="icon-social" width="20" height="20">
                 <use href="./images/sprite.svg#icon-instagram"></use>
             </svg>
             </a>
         </li>
-        <li class="social-links"><a href="" aria-label="Twitter">
+        <li class="social-links">
+            <a class="social-link" href="" aria-label="Twitter">
                 <span class="visually-hidden">Twitter</span>
                 <svg class="icon-social" width="20" height="18">
                     <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
             </a>
         </li>
-        <li class="social-links"><a href="" aria-label="Facebook">
+        <li class="social-links">
+            <a class="social-link" href="" aria-label="Facebook">
                 <span class="visually-hidden">Facebook</span>
                 <svg class="icon-social" width="15" height="20">
                     <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
             </a>
         </li>
-        <li class="social-links"><a href="" aria-label="Linkedin">
+        <li class="social-links">
+            <a class="social-link" href="" aria-label="Linkedin">
                 <span class="visually-hidden">Linkedin</span>
                 <svg class="icon-social" width="20" height="20">
                     <use href="./images/sprite.svg#icon-linkedin"></use>
@@ -208,28 +216,32 @@
     <h3 class="names">Robert Jakis</h3>
     <p class="occupation">Marketing</p>
     <ul class="social">
-        <li class="social-links"><a href=""  aria-label="Instagram">
+        <li class="social-links">
+            <a class="social-link" href=""  aria-label="Instagram">
             <span class="visually-hidden">Instagram</span>
             <svg class="icon-social" width="20" height="20">
                 <use href="./images/sprite.svg#icon-instagram"></use>
             </svg>
             </a>
         </li>
-        <li class="social-links"><a href="" aria-label="Twitter">
+        <li class="social-links">
+            <a class="social-link" href="" aria-label="Twitter">
                 <span class="visually-hidden">Twitter</span>
                 <svg class="icon-social" width="20" height="18">
                     <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
             </a>
         </li>
-        <li class="social-links"><a href="" aria-label="Facebook">
+        <li class="social-links">
+            <a class="social-link" href="" aria-label="Facebook">
                 <span class="visually-hidden">Facebook</span>
                 <svg class="icon-social" width="15" height="20">
                     <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
             </a>
         </li>
-        <li class="social-links"><a href="" aria-label="Linkedin">
+        <li class="social-links">
+            <a class="social-link" href="" aria-label="Linkedin">
                 <span class="visually-hidden">Linkedin</span>
                 <svg class="icon-social" width="20" height="20">
                     <use href="./images/sprite.svg#icon-linkedin"></use>
@@ -245,28 +257,32 @@
     <h3 class="names">Martin Doe</h3>
     <p class="occupation">UI Designer</p>
     <ul class="social">
-        <li class="social-links"><a href=""  aria-label="Instagram">
+        <li class="social-links">
+            <a class="social-link" href=""  aria-label="Instagram">
             <span class="visually-hidden">Instagram</span>
             <svg class="icon-social" width="20" height="20">
                 <use href="./images/sprite.svg#icon-instagram"></use>
             </svg>
             </a>
         </li>
-        <li class="social-links"><a href="" aria-label="Twitter">
+        <li class="social-links">
+            <a class="social-link" href="" aria-label="Twitter">
                 <span class="visually-hidden">Twitter</span>
                 <svg class="icon-social" width="20" height="18">
                     <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
             </a>
         </li>
-        <li class="social-links"><a href="" aria-label="Facebook">
+        <li class="social-links">
+            <a class="social-link" href="" aria-label="Facebook">
                 <span class="visually-hidden">Facebook</span>
                 <svg class="icon-social" width="15" height="20">
                     <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
             </a>
         </li>
-        <li class="social-links"><a href="" aria-label="Linkedin">
+        <li class="social-links">
+            <a class="social-link" href="" aria-label="Linkedin">
                 <span class="visually-hidden">Linkedin</span>
                 <svg class="icon-social" width="20" height="20">
                     <use href="./images/sprite.svg#icon-linkedin"></use>
@@ -284,7 +300,7 @@
     <h2 class="section-title">Постоянные клиенты</h2>
     <ul class="companies-list container">
         <li class="section-companies">
-            <a href="">
+            <a class="companies-link" href="">
                 <span class="visually-hidden">Ya&Co</span>
                 <svg class="icon-logo" width="44.27" height="49.23">
                     <use href="./images/sprite.svg#icon-logo1"></use>
@@ -292,7 +308,7 @@
             </a>   
         </li>
         <li class="section-companies">
-            <a href="">
+            <a class="companies-link" href="">
                 <span class="visually-hidden">Company</span>
                 <svg class="icon-logo" width="40" height="52">
                     <use href="./images/sprite.svg#icon-logo2"></use>
@@ -300,7 +316,7 @@
             </a>   
         </li>
         <li class="section-companies">
-            <a href="">
+            <a class="companies-link" href="">
                 <span class="visually-hidden">Company</span>
                 <svg class="icon-logo" width="41" height="42.6">
                     <use href="./images/sprite.svg#icon-logo3"></use>
@@ -308,7 +324,7 @@
             </a>     
         </li>
         <li class="section-companies">
-            <a href="">
+            <a class="companies-link" href="">
                 <span class="visually-hidden">Foster Peters</span>
                 <svg class="icon-logo" width="79.66" height="42.02">
                     <use href="./images/sprite.svg#icon-logo4"></use>
@@ -316,7 +332,7 @@
             </a>     
         </li>
         <li class="section-companies">
-            <a href="">
+            <a class="companies-link" href="">
                 <span class="visually-hidden">Brand</span>
                 <svg class="icon-logo" width="59" height="47">
                     <use href="./images/sprite.svg#icon-logo5"></use>
@@ -324,7 +340,7 @@
             </a>     
         </li>
         <li class="section-companies">
-            <a href="">
+            <a class="companies-link" href="">
                 <span class="visually-hidden">Company</span>
                 <svg class="icon-logo" width="88.48" height="45.44">
                     <use href="./images/sprite.svg#icon-logo6"></use>
@@ -358,28 +374,32 @@
 <div >
     <b class="join">присоединяйтесь</b>
     <ul class="social-footer">
-        <li class="social-links"><a href=""  aria-label="Instagram">
+        <li class="social-links">
+            <a class="social-link" href=""  aria-label="Instagram">
             <span class="visually-hidden">Instagram</span>
             <svg class="icon-footer" width="20" height="20">
                 <use href="./images/sprite.svg#icon-instagram"></use>
             </svg>
             </a>
             </li>
-            <li class="social-links"><a href=""  aria-label="Twitter">
+            <li class="social-links">
+                <a class="social-link" href=""  aria-label="Twitter">
                 <span class="visually-hidden">Twitter</span>
                 <svg class="icon-footer" width="20" height="18">
                     <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
             </a>
             </li>
-            <li class="social-links"><a href=""  aria-label="Facebook">
+            <li class="social-links">
+                <a class="social-link" href=""  aria-label="Facebook">
                 <span class="visually-hidden">Facebook</span>
                 <svg class="icon-footer" width="15" height="20">
                     <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
             </a>
             </li>
-            <li class="social-links"><a href=""  aria-label="Linkedin">
+            <li class="social-links">
+                <a class="social-link" href=""  aria-label="Linkedin">
                 <span class="visually-hidden">Linkedin</span>
                 <svg class="icon-footer" width="20" height="20">
                     <use href="./images/sprite.svg#icon-linkedin"></use>
