--- a/portfolio.html
+++ b/portfolio.html
@@ -205,28 +205,32 @@
 <div >
     <b class="join">присоединяйтесь</b>
     <ul class="social-footer">
-        <li class="social-links"><a href=""  aria-label="Instagram">
+        <li class="social-links">
+            <a class="social-link" href=""  aria-label="Instagram">
             <span class="visually-hidden">Instagram</span>
             <svg class="icon-footer" width="20" height="20">
                 <use href="./images/sprite.svg#icon-instagram"></use>
             </svg>
             </a>
             </li>
-            <li class="social-links"><a href=""  aria-label="Twitter">
+            <li class="social-links">
+                <a class="social-link" href=""  aria-label="Twitter">
                 <span class="visually-hidden">Twitter</span>
                 <svg class="icon-footer" width="20" height="18">
                     <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
             </a>
             </li>
-            <li class="social-links"><a href=""  aria-label="Facebook">
+            <li class="social-links">
+                <a class="social-link" href=""  aria-label="Facebook">
                 <span class="visually-hidden">Facebook</span>
                 <svg class="icon-footer" width="15" height="20">
                     <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
             </a>
             </li>
-            <li class="social-links"><a href=""  aria-label="Linkedin">
+            <li class="social-links">
+                <a class="social-link" href=""  aria-label="Linkedin">
                 <span class="visually-hidden">Linkedin</span>
                 <svg class="icon-footer" width="20" height="20">
                     <use href="./images/sprite.svg#icon-linkedin"></use>
