--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 </head>
                                        <!-- Шапка сайта -->
 <header >
-    <div class="container">
+    <div class="container-nav">
         <nav>
                 <a href="./index.html" class="upper-logo">
                     <span class="colortext">Web</span> Studio
@@ -186,7 +186,6 @@
 
 <!--Футер-->
 
-
 <footer>
     <div class="footer-container">
 <div class="footer-block">
@@ -240,13 +239,17 @@
 </ul>
 </div>
 <div class="subscription">
-    <b class="join">подписаться на рассылку</b><br>
+    <b class="join">Подпишитесь на рассылку</b><br>
+    <div>
+    <input type="email" class="footer-input" name="email" placeholder="E-mail ">
+            
     <button type="button" class="button-footer">Подписаться
         <span class="visually-hidden">join</span>
                 <svg class="icon-join" width="24" height="24">
                     <use href="./images/sprite.svg#icon-paper_plane"></use>
                 </svg>
     </button>
+</div>
 </div>
 </div>   
 <div >
