меняет тип кнопки

--- a/index.html
+++ b/index.html
@@ -474,13 +474,8 @@
 </div>
 
 
-
-
-
-
-
     <div class="send">
-        <button  type="button" class="send-button" >Отправить</button>
+        <button  type="submit" class="send-button" >Отправить</button>
     </div>
     
       </form>  
