--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
             </li>
 </ul>
 </div>
-<div class="subscription">
+<div >
     <b class="join">Подпишитесь на рассылку</b><br>
     <div>
     <input type="email" class="footer-input" name="email" placeholder="E-mail ">
