--- a/portfolio.html
+++ b/portfolio.html
@@ -187,7 +187,7 @@
 <!--Футер-->
 
 <footer>
-    <div class="footer-container">
+    <div class="footer-container container">
 <div class="footer-block">
     <a href="./index.html" class="logo">
         <span class="colortext">Web</span> Studio
@@ -252,9 +252,7 @@
 </div>
 </div>
 </div>   
-<div >
-<p class="copyright">2020  Developed by GoIT Students </p>
-</div>  
+
  
 </footer> 
 <script src="./js/modal.js"></script>
